--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Serverless cloud router
-subtitle: Learn about Serverless cloud routing
-description: Learn how serverless cloud routing works
+subtitle: Learn about Serverless cloud routing use cases and limitations
+description: Learn about Apollo GraphOS Serverless cloud routers, including intended use cases, limitations, and router statuses.
 ---
 
 <Note>
