Update cloud routing headers and frontmatter

--- a/src/content/graphos/cloud-routing/configuration.mdx
+++ b/src/content/graphos/cloud-routing/configuration.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cloud router configuration
 subtitle: Learn how to configure cloud routers in GraphOS Studio
-description: Learn how to configure cloud routers and manage secrets in GraphOS Studio
+description: Learn about cloud router configurations including HTTP header rules, CORSs settings, secret management, and more in GraphOS Studio.
 ---
 
 After you create a cloud supergraph, you can view and manage its router's configuration from GraphOS Studio.
