--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cloud Dedicated overview
 subtitle: Learn about the Cloud Dedicated offering and pricing
-description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
+description: Learn about Apollo's dedicated cloud routing for GraphQL APIs including available AWS regions and pricing.
 ---
 
 <DedicatedPreview />
