--- a/src/content/graphos/cloud-routing/dedicated/throughput.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/throughput.mdx
@@ -1,7 +1,7 @@
 ---
 title: Throughput guide
-subtitle: Understand GCU performance and scaling
-description: Learn how to calculate and scale the throughput capacity of your cloud supergraph.
+subtitle: Understand GCU performance and scale your graph's capacity
+description: Learn about Graph Compute Units (GCUs)—a measure of throughput—and how to calculate and manage them for your supergraph on GraphOS Dedicated
 ---
 
 <DedicatedPreview />
