--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -1,14 +1,14 @@
 ---
-title: Securely communicate with subgraphs on your AWS VPC
-subtitle: Configure AWS VPC Lattice to communicate with your Cloud Dedicated router
-description: Configure AWS VPC Lattice to send and receive traffic to and from your Apollo Cloud Dedicated router
+title: Configure Amazon VPC Lattice
+subtitle: Securely communicate with subgraphs on your Amazon VPC
+description: Configure Amazon VPC Lattice to send traffic to and receive traffic from your Apollo Cloud Dedicated router.
 ---
 
 <DedicatedPreview />
 
-Cloud Dedicated uses [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an AWS VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization.
+Cloud Dedicated uses [Amazon VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an Amazon VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization.
 
-You can provision AWS VPC Lattice with the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws). Refer to the [module's README](https://github.com/apollographql/terraform-graphos-aws#apollo-graphos-cloud-private-subgraphs-module) for more information.
+You can provision VPC Lattice with the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws). Refer to the [module's README](https://github.com/apollographql/terraform-graphos-aws#apollo-graphos-cloud-private-subgraphs-module) for more information.
 
 ```mermaid
 flowchart LR;
@@ -18,7 +18,7 @@ flowchart LR;
   end;
   resourceshare["AWS RAM <br/> Resource <br/> Share"]
   subgraph "AWS Virtual Private Cloud"
-    lattice[AWS VPC <br/> Lattice <br/> Service]
+    lattice[Amazon VPC <br/> Lattice <br/> Service]
     service1[Subgraph 1];
     service2[Subgraph 2];
     service3[Subgraph 3];
@@ -34,16 +34,16 @@ flowchart LR;
 <Note>
 
 - You can only use Lattice for subgraphs in the same AWS region as your cloud router. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">let us know</TrackableLink>.
-- Using AWS VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
+- Using Amazon VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
 
 </Note>
 
-## Create and share an AWS VPC Lattice service
+## Create and share an Amazon VPC Lattice service
 
 To allow Cloud Dedicated to send traffic to your private subgraphs, you must:
 
-1. Create one or more AWS VPC Lattice target groups.
-2. Create one or more AWS VPC Lattice services.
+1. Create one or more Amazon VPC Lattice target groups.
+2. Create one or more Amazon VPC Lattice services.
 3. Share the service(s) with the Apollo AWS Organization.
 4. Provide the service(s) routing information in your Apollo Organization configuration page.
 
@@ -55,7 +55,7 @@ The AWS Console interface may differ slightly from the screenshots in this guide
 
 </Note>
 
-### Step 1. Create AWS VPC Lattice target groups
+### Step 1. Create Amazon VPC Lattice target groups
 
 A Lattice _target group_ is a collection of targets, or compute resources, that run your application or service. You must set these up so your Lattice services can route requests accurately. Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
 
@@ -68,7 +68,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -77,7 +77,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/create-target-group.jpg"
   />
 
@@ -85,7 +85,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/target-group-configuration.jpg"
   />
 
@@ -93,7 +93,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/target-group-health-checks.jpg"
   />
 
@@ -101,7 +101,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/register-targets.jpg"
   />
 
@@ -109,7 +109,7 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/review-targets.jpg"
   />
 
@@ -117,13 +117,13 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/create-target-group-final.jpg"
   />
 
-Congratulations! You've created an AWS VPC Lattice target group. Repeat this process for each resource you want to share with Cloud Dedicated.
+Congratulations! You've created an Amazon VPC Lattice target group. Repeat this process for each resource you want to share with Cloud Dedicated.
 
-### Step 2. Create an AWS VPC Lattice service
+### Step 2. Create an Amazon VPC Lattice service
 
 1. In the AWS Console for your region, go to the VPC service page:
 
@@ -134,7 +134,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -143,7 +143,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/create-service.jpg"
   />
 
@@ -151,7 +151,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/service-identifiers.jpg"
   />
 
@@ -159,7 +159,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/custom-domain.jpg"
   />
 
@@ -190,7 +190,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/service-monitoring.jpg"
   />
 
@@ -204,7 +204,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/http-listener.jpg"
   />
 
@@ -212,7 +212,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/service-rules.jpg"
   />
 
@@ -220,7 +220,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/listener-complete.jpg"
 />
 
@@ -228,7 +228,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/service-network.jpg"
   />
 
@@ -236,13 +236,13 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/create-service-final.jpg"
   />
 
 Congratulations! You've now created a Lattice service for your subgraphs.
 
-### Step 3. Share the AWS VPC Lattice service with Cloud Dedicated
+### Step 3. Share the Amazon VPC Lattice service with Cloud Dedicated
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
 
@@ -253,7 +253,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-shared-by-me.jpg"
     width="175px"
   />
@@ -262,7 +262,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/create-resource-share.jpg"
   />
 
@@ -270,7 +270,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/resource-share-name.jpg"
   />
 
@@ -279,7 +279,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/resource-selection.jpg"
   />
 
@@ -287,7 +287,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/resource-tags.jpg"
   />
 
@@ -296,7 +296,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/managed-permissions.jpg"
   />
 
@@ -304,7 +304,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/resource-principal.jpg"
   />
 
@@ -312,7 +312,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC shared resources page"
+    alt="Amazon VPC shared resources page"
     src="../../img/cloud-dedicated/resource-principal-confirmation.jpg"
   />
 
@@ -340,7 +340,7 @@ The last step is associating your resource share with the Apollo Organization ac
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/shared-by-me.jpg"
   />
 
@@ -348,7 +348,7 @@ The last step is associating your resource share with the Apollo Organization ac
 
   <img
     className="screenshot"
-    alt="AWS VPC resource share page"
+    alt="Amazon VPC resource share page"
     src="../../img/cloud-dedicated/select-resource-share.jpg"
   />
 
@@ -356,7 +356,7 @@ The last step is associating your resource share with the Apollo Organization ac
 
   <img
     className="screenshot"
-    alt="AWS VPC resource share page"
+    alt="Amazon VPC resource share page"
     src="../../img/cloud-dedicated/resource-share-summary.jpg"
   />
 
@@ -438,9 +438,9 @@ Congratulations! You've now added a private subgraph to your GraphOS cloud route
 
 ## Further restrict access to private subgraphs
 
-Once you configure an AWS VPC Lattice service to accept traffic from the Apollo AWS Organization, it is protected by multiple security layers:
+Once you configure an Amazon VPC Lattice service to accept traffic from the Apollo AWS Organization, it is protected by multiple security layers:
 
-- The AWS VPC Lattice service network only allows traffic with a valid signature and over HTTPS.
+- The Amazon VPC Lattice service network only allows traffic with a valid signature and over HTTPS.
 - The Lattice service's configured authorization policy ensures traffic only comes from Apollo's AWS accounts. (This is the authorization policy you configured in step 6 [when creating your Lattice service](#step-2-create-an-aws-vpc-lattice-service).)
 - Apollo cloud router provisioning compares subgraphs in a supergraph's configuration against the list of known private subgraphs in its Apollo account. It refuses to create or update cloud routers with unknown private subgraphs.
 - Cloud routers only have permission to invoke private subgraphs listed in their supergraph configuration.
@@ -490,7 +490,7 @@ If you aren't using the Apollo Terraform module, follow these steps:
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -499,7 +499,7 @@ If you aren't using the Apollo Terraform module, follow these steps:
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/select-lattice-service.jpg"
   />
 
@@ -538,7 +538,7 @@ If there are multiple supergraphs which should have access to the subgraph, use 
 Similarly, you can use a comma-separated string of account IDs for `aws:PrincipalTag/Apollo:accountId`:
 
 ```json showLineNumbers=false disableCopy=true
-"aws:PrincipalTag/Apollo:accountId": "my_account_id_xezf34, "my_account_id_dehs56"
+"aws:PrincipalTag/Apollo:accountId": "my_account_id_xezf34", "my_account_id_dehs56"
 ```
 
 ## Remove access to private subgraphs
@@ -556,7 +556,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -565,7 +565,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC resource share page"
+    alt="Amazon VPC resource share page"
     src="../../img/cloud-dedicated/create-resource-share.jpg"
   />
 
@@ -582,7 +582,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -591,7 +591,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/select-lattice-service.jpg"
   />
 
@@ -599,7 +599,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/graphos-service.jpg"
   />
 
@@ -607,7 +607,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/delete-network-associations.jpg"
   />
 
@@ -615,15 +615,15 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 
   <img
     className="screenshot"
-    alt="AWS VPC service page"
+    alt="Amazon VPC service page"
     src="../../img/cloud-dedicated/delete-network-associations-final.jpg"
   />
 
 Deleting the network association can take a few seconds. Once the network association is deleted, Cloud Dedicated cannot contact your subgraphs anymore.
 
-## AWS VPC Lattice monitoring
+## Amazon VPC Lattice monitoring
 
-To validate that traffic is flowing to your private subgraphs, you can use the metrics and access logs emitted by AWS VPC Lattice:
+To validate that traffic is flowing to your private subgraphs, you can use the metrics and access logs emitted by Amazon VPC Lattice:
 
 1. In the AWS Console for your region of choice, go to the VPC service page.
 
@@ -631,7 +631,7 @@ To validate that traffic is flowing to your private subgraphs, you can use the m
 
   <img
     className="screenshot"
-    alt="AWS VPC service page left menu"
+    alt="Amazon VPC service page left menu"
     src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
     width="175px"
   />
@@ -640,27 +640,27 @@ To validate that traffic is flowing to your private subgraphs, you can use the m
 
   <img
     className="screenshot"
-    alt="AWS VPC Lattice service"
+    alt="Amazon VPC Lattice service"
     src="../../img/cloud-dedicated/vpc-lattice-service.png"
   />
 
 4. Click on the **Monitoring** tab.
 
-From there, you can configure and enable access logs for your AWS VPC Lattice service. You can also navigate to the Metrics tab to get a quick overview if traffic is flowing to your private subgraphs.
+From there, you can configure and enable access logs for your Amazon VPC Lattice service. You can also navigate to the Metrics tab to get a quick overview if traffic is flowing to your private subgraphs.
 
   <img
     className="screenshot"
-    alt="AWS VPC Lattice access logs"
+    alt="Amazon VPC Lattice access logs"
     src="../../img/cloud-dedicated/vpc-lattice-access-logs.png"
   />
 
   <img
     className="screenshot"
-    alt="AWS VPC Lattice metrics"
+    alt="Amazon VPC Lattice metrics"
     src="../../img/cloud-dedicated/vpc-lattice-metrics.png"
   />
 
-You can also use [Amazon CloudWatch metrics emitted by AWS VPC Lattice](https://docs.aws.amazon.com/vpc-lattice/latest/ug/monitoring-cloudwatch.html) to set up dashboards and alarms to understand the health of your private subgraphs.
+You can also use [Amazon CloudWatch metrics emitted by Amazon VPC Lattice](https://docs.aws.amazon.com/vpc-lattice/latest/ug/monitoring-cloudwatch.html) to set up dashboards and alarms to understand the health of your private subgraphs.
 
 ## Frequently asked questions
 
@@ -672,7 +672,7 @@ When you add a private subgraph to one of your supergraphs, Cloud Dedicated will
 
 As a second line of defense, supergraphs use AWS IAM permissions and [SigV4](https://docs.aws.amazon.com/AmazonS3/latest/API/sig-v4-authenticating-requests.html) to only allow traffic to the subgraphs in the same Apollo organization.
 
-#### I want to use AWS VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
+#### I want to use Amazon VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
 
 Yes. Cloud Dedicated will associate your Lattice services with its own service network, and you can associate a Lattice service with multiple service networks. You can also create multiple Lattice target groups or Lattice services for the same load balancer, IP addresses, Lambda functions, or other resources supported by Lattice target groups.
 
