--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cloud routing for supergraphs
 subtitle: Learn about Apollo-managed cloud routers
-description: Learn about Apollo's managed cloud routers designed to efficiently route requests to your GraphQL APIs, ensuring optimal performance and scalability.
+description: Learn about Apollo's managed cloud routers to efficiently route requests to your GraphQL APIs, ensuring optimal performance and scalability.
 ---
 
 When you create a cloud supergraph with GraphOS Studio, GraphOS automatically provisions and manages a _router_ that acts as an entry point to your GraphQL APIs. In this architecture, individual GraphQL APIs are called _subgraphs_. Clients send operations to your router's public endpoint, instead of sending them directly to your subgraphs.
@@ -107,6 +107,7 @@ Apollo automatically deletes variants of Serverless cloud supergraphs that recei
 ## Limited compute on Serverless
 
 Serverless has limited underlying compute resources, so certain types of workloads might require you to upgrade to Dedicated. Serverless capacity can be exhausted in the following circumstances:
+
 - **Complex schemas** can exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types.
 - **Too many simultaneous requests** can cause your Serverless cloud router to return `429` errors to your clients.
 
