Apply suggestions from code review
Co-authored-by: Danielle Man <man.danielleh@gmail.com>

--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -72,11 +72,11 @@ Deletion preserves a cloud router's associated variant's schema but deletes the 
 
 ## How to migrate
 
-Migration entails creating a new variant or graph in GraphOS Studio. Once you create a new variant or graph, you receive a new graph ref and endpoint URL to redirect client traffic to. You can't reuse an existing graph ref.
+Unfortunately, we are unable to offer an in-place migration. You will need to create a new variant on your graph, or a new graph entirely. Once you create this new variant or graph, you will receive a new graph ref and endpoint URL which you can redirect your client traffic to. You can't reuse an existing graph ref.
 
 <Caution>
 
-Only delete your existing cloud router after you've created your new cloud router.
+Don't delete the variant that houses your existing cloud router until you've created a new one.
 
 </Caution>
 
