--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -21,7 +21,7 @@ You need to migrate if:
 - You have graphs created before May 21, 2024 AND
 - Any of your graphs' cloud routers run on Fly.io
 
-You can check if any of your graph's use cloud routers running on Fly.io in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content. Go to a graph variant's **Overview** page and look for the migration alert.
+You can check if any of your graph's use cloud routers running on Fly.io in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content. Go to a graph's **Overview** page and look for the migration alert.
 
 [To-do: add screenshot of migration banner]
 
